--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link href="/dist/tailwind.css" rel="stylesheet">
   </head>
   <body>
     <app-root></app-root>
